--- a/SqlHelper/SqlHelper/SqlHelper.csproj
+++ b/SqlHelper/SqlHelper/SqlHelper.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpResultConfig.cs" />
     <Compile Include="SqlGens.cs" />
+    <Compile Include="SqlHelper.cs" />
     <Compile Include="SqlUtils.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
