--- a/SqlHelper/SqlHelper/SqlHelper.csproj
+++ b/SqlHelper/SqlHelper/SqlHelper.csproj
@@ -47,6 +47,7 @@
     <Compile Include="DbSet.cs" />
     <Compile Include="DbSet_Extensions.cs" />
     <Compile Include="DbSet_Partial.cs" />
+    <Compile Include="DbSet_Utils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpResultConfig.cs" />
     <Compile Include="SqlGens.cs" />
