--- a/SqlHelper/Sample/Sample.csproj
+++ b/SqlHelper/Sample/Sample.csproj
@@ -51,6 +51,7 @@
     <Compile Include="DAL\DAL_UserDefinedFunctions_Table.cs" />
     <Compile Include="DAL\DAL_UserDefinedTableTypes.cs" />
     <Compile Include="DAL\DAL_Views.cs" />
+    <Compile Include="Expression.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
