--- a/SqlHelper/Sample/Sample.csproj
+++ b/SqlHelper/Sample/Sample.csproj
@@ -56,6 +56,9 @@
     <Compile Include="DAL\DAL_Database_UserDefinedTableTypes_Methods.cs" />
     <Compile Include="DAL\DAL_Database_Views.cs" />
     <Compile Include="DAL\DAL_Expressions_Tables.cs" />
+    <Compile Include="DAL\DAL_Expressions_UserDefinedFunctions_Table.cs" />
+    <Compile Include="DAL\DAL_Expressions_UserDefinedTableTypes.cs" />
+    <Compile Include="DAL\DAL_Expressions_Views.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
