--- a/SqlHelper/Sample/Sample.csproj
+++ b/SqlHelper/Sample/Sample.csproj
@@ -46,6 +46,10 @@
     <None Include="Copy of Program.cs" />
     <None Include="Copy of Expression.cs" />
     <None Include="Copy %282%29 of Expression.cs" />
+    <Compile Include="DAL\DAL_ColumnEnums_Tables.cs" />
+    <Compile Include="DAL\DAL_ColumnEnums_UserDefinedFunctions_Table.cs" />
+    <Compile Include="DAL\DAL_ColumnEnums_UserDefinedTableTypes.cs" />
+    <Compile Include="DAL\DAL_ColumnEnums_Views.cs" />
     <Compile Include="DAL\DAL_Database_StoredProcedures.cs" />
     <Compile Include="DAL\DAL_Database_StoredProcedures_Methods.cs" />
     <Compile Include="DAL\DAL_Database_Tables.cs" />
@@ -59,6 +63,14 @@
     <Compile Include="DAL\DAL_Expressions_UserDefinedFunctions_Table.cs" />
     <Compile Include="DAL\DAL_Expressions_UserDefinedTableTypes.cs" />
     <Compile Include="DAL\DAL_Expressions_Views.cs" />
+    <Compile Include="DAL\DAL_Orientations_Tables.cs" />
+    <Compile Include="DAL\DAL_Orientations_UserDefinedFunctions_Table.cs" />
+    <Compile Include="DAL\DAL_Orientations_UserDefinedTableTypes.cs" />
+    <Compile Include="DAL\DAL_Orientations_Views.cs" />
+    <Compile Include="DAL\DAL_Queries_Tables.cs" />
+    <Compile Include="DAL\DAL_Queries_UserDefinedFunctions_Table.cs" />
+    <Compile Include="DAL\DAL_Queries_UserDefinedTableTypes.cs" />
+    <Compile Include="DAL\DAL_Queries_Views.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
