--- a/SqlHelper/Sample/Sample.csproj
+++ b/SqlHelper/Sample/Sample.csproj
@@ -47,6 +47,7 @@
     <None Include="Copy of Program.cs" />
     <None Include="Copy of Expression.cs" />
     <None Include="Copy %282%29 of Expression.cs" />
+    <None Include="Copy %283%29 of Program.cs" />
     <Compile Include="DAL\DAL_ColumnEnums_Tables.cs" />
     <Compile Include="DAL\DAL_ColumnEnums_UserDefinedFunctions_Table.cs" />
     <Compile Include="DAL\DAL_ColumnEnums_UserDefinedTableTypes.cs" />
