--- a/SqlHelper/SqlHelper/SqlLib.csproj
+++ b/SqlHelper/SqlHelper/SqlLib.csproj
@@ -49,6 +49,7 @@
     <Compile Include="DbSet_Partial.cs" />
     <Compile Include="DbSet_Partial2.cs" />
     <Compile Include="DbSet_Utils.cs" />
+    <Compile Include="ISerial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpResultConfig.cs" />
     <Compile Include="SqlColumnEnums.cs" />
