--- a/SqlHelper/Sample/Sample.csproj
+++ b/SqlHelper/Sample/Sample.csproj
@@ -51,6 +51,19 @@
     <Compile Include="DAL\DAL_ColumnEnums_UserDefinedFunctions_Table.cs" />
     <Compile Include="DAL\DAL_ColumnEnums_UserDefinedTableTypes.cs" />
     <Compile Include="DAL\DAL_ColumnEnums_Views.cs" />
+    <Compile Include="DAL\DAL_Database_Class_StoredProcedures.cs" />
+    <Compile Include="DAL\DAL_Database_Class_Tables.cs" />
+    <Compile Include="DAL\DAL_Database_Class_UserDefinedFunctions_Scalar.cs" />
+    <Compile Include="DAL\DAL_Database_Class_UserDefinedFunctions_Table.cs" />
+    <Compile Include="DAL\DAL_Database_Class_UserDefinedTableTypes.cs" />
+    <Compile Include="DAL\DAL_Database_Class_Views.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_DB_Tables_Extensions.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_DB_StoredProcedures.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_DB_Tables.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_DB_UserDefinedTableTypes.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_DB_Views.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_Serial_Tables.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_Serial_Views.cs" />
     <Compile Include="DAL\DAL_Expressions_Tables.cs" />
     <Compile Include="DAL\DAL_Expressions_UserDefinedFunctions_Table.cs" />
     <Compile Include="DAL\DAL_Expressions_UserDefinedTableTypes.cs" />
