--- a/SqlHelper/Sample/Sample.csproj
+++ b/SqlHelper/Sample/Sample.csproj
@@ -50,6 +50,40 @@
     <None Include="Copy %285%29 of Program.cs" />
     <None Include="Copy %286%29 of Program.cs" />
     <None Include="Copy %287%29 of Program.cs" />
+    <Compile Include="DAL\DAL_ColumnEnums_Tables.cs" />
+    <Compile Include="DAL\DAL_ColumnEnums_UserDefinedFunctions_Table.cs" />
+    <Compile Include="DAL\DAL_ColumnEnums_UserDefinedTableTypes.cs" />
+    <Compile Include="DAL\DAL_ColumnEnums_Views.cs" />
+    <Compile Include="DAL\DAL_Database_Class_StoredProcedures.cs" />
+    <Compile Include="DAL\DAL_Database_Class_Tables.cs" />
+    <Compile Include="DAL\DAL_Database_Class_UserDefinedFunctions_Scalar.cs" />
+    <Compile Include="DAL\DAL_Database_Class_UserDefinedFunctions_Table.cs" />
+    <Compile Include="DAL\DAL_Database_Class_UserDefinedTableTypes.cs" />
+    <Compile Include="DAL\DAL_Database_Class_Views.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_DB_StoredProcedures.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_DB_Tables.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_DB_Tables_Extensions.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_DB_UserDefinedTableTypes_Extensions.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_DB_Views.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_Serial_Tables.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_Serial_UserDefinedTableTypes.cs" />
+    <Compile Include="DAL\DAL_Database_Methods_Serial_Views.cs" />
+    <Compile Include="DAL\DAL_Expressions_Class_Tables.cs" />
+    <Compile Include="DAL\DAL_Expressions_Class_UserDefinedFunctions_Table.cs" />
+    <Compile Include="DAL\DAL_Expressions_Class_UserDefinedTableTypes.cs" />
+    <Compile Include="DAL\DAL_Expressions_Class_Views.cs" />
+    <Compile Include="DAL\DAL_Expressions_Methods_Tables.cs" />
+    <Compile Include="DAL\DAL_Expressions_Methods_UserDefinedFunctions_Table.cs" />
+    <Compile Include="DAL\DAL_Expressions_Methods_UserDefinedTableTypes.cs" />
+    <Compile Include="DAL\DAL_Expressions_Methods_Views.cs" />
+    <Compile Include="DAL\DAL_Orientations_Tables.cs" />
+    <Compile Include="DAL\DAL_Orientations_UserDefinedFunctions_Table.cs" />
+    <Compile Include="DAL\DAL_Orientations_UserDefinedTableTypes.cs" />
+    <Compile Include="DAL\DAL_Orientations_Views.cs" />
+    <Compile Include="DAL\DAL_Queries_Tables.cs" />
+    <Compile Include="DAL\DAL_Queries_UserDefinedFunctions_Table.cs" />
+    <Compile Include="DAL\DAL_Queries_UserDefinedTableTypes.cs" />
+    <Compile Include="DAL\DAL_Queries_Views.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -62,9 +96,7 @@
   <ItemGroup>
     <Content Include="todo.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DAL\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
