--- a/SqlHelper/Sample/Sample.csproj
+++ b/SqlHelper/Sample/Sample.csproj
@@ -55,6 +55,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{6CD1CFE1-62CD-44D4-8CB9-8E9B35E7F6C5}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SqlHelper\SqlLib.csproj">
       <Project>{EF00EADE-0D3E-445E-A63F-3BE5D1684DCA}</Project>
       <Name>SqlLib</Name>
@@ -63,9 +67,7 @@
   <ItemGroup>
     <Content Include="todo.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="DAL\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
