--- a/SqlHelper/WCFServer/WCFServer.csproj
+++ b/SqlHelper/WCFServer/WCFServer.csproj
@@ -55,6 +55,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{6CD1CFE1-62CD-44D4-8CB9-8E9B35E7F6C5}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SqlHelper\SqlLib.csproj">
+      <Project>{EF00EADE-0D3E-445E-A63F-3BE5D1684DCA}</Project>
+      <Name>SqlLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
