--- a/SqlHelper/SLClient/SLClient.csproj
+++ b/SqlHelper/SLClient/SLClient.csproj
@@ -69,6 +69,162 @@
     <Reference Include="System.Windows.Browser" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\DAL\DAL_Class_ColumnEnums_Tables.cs">
+      <Link>DAL\DAL_Class_ColumnEnums_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_ColumnEnums_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Class_ColumnEnums_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_ColumnEnums_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Class_ColumnEnums_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_ColumnEnums_Views.cs">
+      <Link>DAL\DAL_Class_ColumnEnums_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Database_StoredProcedures.cs">
+      <Link>DAL\DAL_Class_Database_StoredProcedures.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Database_Tables.cs">
+      <Link>DAL\DAL_Class_Database_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Database_UserDefinedFunctions_Scalar.cs">
+      <Link>DAL\DAL_Class_Database_UserDefinedFunctions_Scalar.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Database_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Class_Database_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Database_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Class_Database_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Database_Views.cs">
+      <Link>DAL\DAL_Class_Database_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Expressions_Tables.cs">
+      <Link>DAL\DAL_Class_Expressions_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Expressions_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Class_Expressions_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Expressions_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Class_Expressions_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Expressions_Views.cs">
+      <Link>DAL\DAL_Class_Expressions_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Orientations_Tables.cs">
+      <Link>DAL\DAL_Class_Orientations_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Orientations_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Class_Orientations_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Orientations_Views.cs">
+      <Link>DAL\DAL_Class_Orientations_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Orientation_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Class_Orientation_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Queries_Tables.cs">
+      <Link>DAL\DAL_Class_Queries_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Queries_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Class_Queries_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Queries_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Class_Queries_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Class_Queries_Views.cs">
+      <Link>DAL\DAL_Class_Queries_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_ColumnEnums_Tables.cs">
+      <Link>DAL\DAL_Methods_Serial_ColumnEnums_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_ColumnEnums_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Methods_Serial_ColumnEnums_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_ColumnEnums_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Methods_Serial_ColumnEnums_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_ColumnEnums_Views.cs">
+      <Link>DAL\DAL_Methods_Serial_ColumnEnums_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_Database_Tables.cs">
+      <Link>DAL\DAL_Methods_Serial_Database_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_Database_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Methods_Serial_Database_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_Database_Views.cs">
+      <Link>DAL\DAL_Methods_Serial_Database_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_Expressions_Tables.cs">
+      <Link>DAL\DAL_Methods_Serial_Expressions_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_Expressions_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Methods_Serial_Expressions_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_Expressions_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Methods_Serial_Expressions_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_Expressions_Views.cs">
+      <Link>DAL\DAL_Methods_Serial_Expressions_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_Orientations_Tables.cs">
+      <Link>DAL\DAL_Methods_Serial_Orientations_Tables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_Orientations_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Methods_Serial_Orientations_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_Orientations_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Methods_Serial_Orientations_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_Orientations_Views.cs">
+      <Link>DAL\DAL_Methods_Serial_Orientations_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_QueriesTables.cs">
+      <Link>DAL\DAL_Methods_Serial_QueriesTables.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_Queries_UserDefinedFunctions_Table.cs">
+      <Link>DAL\DAL_Methods_Serial_Queries_UserDefinedFunctions_Table.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_Queries_UserDefinedTableTypes.cs">
+      <Link>DAL\DAL_Methods_Serial_Queries_UserDefinedTableTypes.cs</Link>
+    </Compile>
+    <Compile Include="..\DAL\DAL_Methods_Serial_Queries_Views.cs">
+      <Link>DAL\DAL_Methods_Serial_Queries_Views.cs</Link>
+    </Compile>
+    <Compile Include="..\SqlHelper\DbSet.cs">
+      <Link>SqlLib\DbSet.cs</Link>
+    </Compile>
+    <Compile Include="..\SqlHelper\DbSet_Extensions.cs">
+      <Link>SqlLib\DbSet_Extensions.cs</Link>
+    </Compile>
+    <Compile Include="..\SqlHelper\DbSet_Partial.cs">
+      <Link>SqlLib\DbSet_Partial.cs</Link>
+    </Compile>
+    <Compile Include="..\SqlHelper\DbSet_Partial2.cs">
+      <Link>SqlLib\DbSet_Partial2.cs</Link>
+    </Compile>
+    <Compile Include="..\SqlHelper\DbSet_Utils.cs">
+      <Link>SqlLib\DbSet_Utils.cs</Link>
+    </Compile>
+    <Compile Include="..\SqlHelper\ISerial.cs">
+      <Link>SqlLib\ISerial.cs</Link>
+    </Compile>
+    <Compile Include="..\SqlHelper\SqlColumnEnums.cs">
+      <Link>SqlLib\SqlColumnEnums.cs</Link>
+    </Compile>
+    <Compile Include="..\SqlHelper\SqlExpressions.cs">
+      <Link>SqlLib\SqlExpressions.cs</Link>
+    </Compile>
+    <Compile Include="..\SqlHelper\SqlOrientations.cs">
+      <Link>SqlLib\SqlOrientations.cs</Link>
+    </Compile>
+    <Compile Include="..\SqlHelper\SqlQueries.cs">
+      <Link>SqlLib\SqlQueries.cs</Link>
+    </Compile>
+    <Compile Include="..\SqlHelper\SqlUtils.cs">
+      <Link>SqlLib\SqlUtils.cs</Link>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
