--- a/SqlHelper/Sample/Sample.csproj
+++ b/SqlHelper/Sample/Sample.csproj
@@ -99,9 +99,10 @@
     <None Include="Copy %284%29 of Program.cs" />
     <None Include="Copy %285%29 of Program.cs" />
     <None Include="Copy %286%29 of Program.cs" />
-    <Compile Include="Copy %287%29 of Program.cs" />
+    <None Include="Copy %287%29 of Program.cs" />
     <None Include="Copy %288%29 of Program.cs" />
-    <None Include="Program.cs" />
+    <Compile Include="Program.cs" />
+    <None Include="Copy %289%29 of Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -139,6 +140,9 @@
       <ProductName>Windows Installer 3.1</ProductName>
       <Install>true</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Backup\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
